--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -148,3 +148,10 @@ $rainbow2: #ffb800;
 $rainbow3: #e7ff06;
 $rainbow4: #7aff00;
 $rainbow5: #00e3ff;
+
+$global-date-icon-z: 1;
+$global-hover-z: 2;
+$global-timeline-bar-z: 4;
+$global-item-icon-z: 5;
+$global-item-z: 3;
+
